# OpenPulse

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  dashboards.py  events.py  health.py  organization.py
backend/app/auth/: dependencies.py  security.py
backend/app/collectors/: base.py  binance.py  mock.py  registry.py
backend/app/core/: config.py  deps.py  exceptions.py  logging.py  middleware.py
backend/app/db/: bootstrap.py  seed.py  session.py
backend/app/events/: manager.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py  api_key.py  dashboard.py  event.py  organization.py  user.py
backend/app/schemas/: __init__.py  auth.py  dashboard.py  error.py  event.py  health.py  organization.py
backend/app/services/: __init__.py  auth.py  broadcast.py  dashboard.py  event.py  organization.py
backend/app/websocket/: handler.py  manager.py
backend/app/workers/: collector_loop.py
backend/scripts/: check.bat  check.sh  start.sh
backend/tests/: conftest.py  test_auth.py  test_binance_collector.py  test_collector.py  test_collector_registry.py  test_events.py  test_health.py  test_repositories.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: config.ts  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  dashboards.ts  events.ts  organization.ts
frontend/src/routes/: index.tsx
spec-sheets/: OpenPulse-v0.1-spec.md  OpenPulse-v0.2-spec.md
(+24 files in other folders)
